Fix content-link extra space in blog

--- a/scss/blog/_posts.scss
+++ b/scss/blog/_posts.scss
@@ -135,9 +135,8 @@
                                 pointer-events: auto;
                                 word-wrap: break-word;
                                 &::before {
-                                    content: "";
+                                    content: none;
                                     margin: 0;
-                                    bottom: 0 !important;
                                 }
                             }
                         }
